welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:5: error: not found: value estFaceBiscuit
  while(!estFaceBiscuit())
         ^