welcome.lessons.welcome.summative.Moria.scala.code
def porterBiscuit(){
  avance()
  prendBiscuit()
  retourne()
  while(!estFaceBiscuit())
  avance()
}